fix: Restore Grid Scrollbar position and diagonal scrolling (#8983)

--- a/resources/scss/src/grid/Container.scss
+++ b/resources/scss/src/grid/Container.scss
@@ -34,7 +34,7 @@
         height             : 100%;
         line-height        : 19px;
         overscroll-behavior: none;
-        overflow-y         : clip;
+        overflow-y         : hidden;
         position           : absolute;
         width              : 100%;
     }
